fix: prevent x-axis label clipping and adjust fight page spacing
- Increase SVG margins to 20px to prevent tick label clipping
- Reduce fight-container padding-top to 30px

--- a/mmarkov.com/src/app/pages/fight/fight-page.component.css
+++ b/mmarkov.com/src/app/pages/fight/fight-page.component.css
@@ -63,7 +63,7 @@ router-outlet + * {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding-top: 48px;
+  padding-top: 30px;
 }
 
 .fight-header {
